2011-11-30 Maxim
- FIX:UI.Vision: Link inspector update is made adaptive to its visibility.
- FIX:UI.Vision: Record of the context for the Undo/ReDo on exit the editing mode is fixed for the primitive ElFigure.

2011-11-29 Maxim
- FIX:UI.Vision: Transparent background for icon creation from widget is fixed.


2011-11-29 Roman
- FIX:UI.Vision: Crash on remove edited child widget try is fixed.
    UnDo and ReDo buttons update on close widget's window is fixed.
- FIX:UI.VCAEngine: Child's widgets deletion from inherited container is fixed.
- FIX:UI.Vision: Previous value request is added for changes record on group values write into the inspector of attributes.


2011-11-28 Roman
- !!:DOC: All generic documents is updated for all languages: openscada.pdf, build.pdf, properties.pdf, "OpenSCADA API", "About OpenSCADA",
    "Lib TechApp", "Quick Start", "WLib Main", "WLib Mnemo elements"
- UI:Vision: Disable white background draw on widget's icons prepare.


2011-11-26 Roman
- FIX:SYS: Error word "Autor" is fixed to "Author" everywhere.
- !!:SYS: Core translation to German, Russian and Ukrainian is updated.
- !!:UI.QTCfg: Documents and full translations is updated and released version 2.1.0.
- !!:UI.QTStarter: Documents and full translations is updated and released version 1.6.2.
- !!:UI.VCAEngine: Documents and full translations is updated and released version 1.2.0.
- !!:UI.Vision: Documents and full translations is updated and released version 1.2.0.
- FIX:UI.Vision: UnDo and ReDo actions is placed to all need context menus.
    UnDo and ReDo acitions is fixed from activation lost on context menu calls.
    Align to Justify is added for primitive "Text".
- !!:UI.WebCfg: Documents and full translations is updated and released version 1.5.6.
- !!:UI.WebCfgD: Documents and full translations is updated and released version 0.8.0.
- !!:UI.WebUser: Documents and full translations is updated and released version 0.6.2.