@@ -1,6 +1,11 @@
+2011-11-30 Roman
+- FIX:UI.Vision: Copy widgets into page is fixed.
+
+
 2011-11-30 Maxim
 - FIX:UI.Vision: Link inspector update is made adaptive to its visibility.
 - FIX:UI.Vision: Record of the context for the Undo/ReDo on exit the editing mode is fixed for the primitive ElFigure.
+
 
 2011-11-29 Maxim
 - FIX:UI.Vision: Transparent background for icon creation from widget is fixed.
